# relink-contracts-rust-soroban

./: .gitignore  Cargo.toml  README.md  build.sh  bump.sh  deploy-consumer.sh  deploy.sh  generate-ts-bindings.sh  request.sh  response.sh
examples/relink-vrf-direct-funding-consumer/: Cargo.toml
examples/relink-vrf-direct-funding-consumer/src/: lib.rs  storage.rs
relink/: Cargo.toml
relink-vrf-consumer-example/: Cargo.toml
relink-vrf-consumer-example/src/: events.rs  lib.rs  storage.rs  test.rs
relink-vrf-direct-funding-proxy/: Cargo.toml
relink-vrf-direct-funding-proxy/src/: events.rs  lib.rs  storage.rs  test.rs
relink-vrf-direct-funding-proxy/src/test/: consumer.rs  mod.rs  proxy.rs
relink-vrf-direct-funding-proxy/src/test/test_consumer/: mod.rs
relink-vrf-direct-funding-proxy/test_snapshots/test/consumer/: request_randomness.1.json
relink-vrf-direct-funding-proxy/test_snapshots/test/proxy/: balance.1.json  init.1.json  max_words.1.json  reinit.1.json  request_event.1.json  request_ids.1.json
relink/src/: confirmed_owner.rs  consumer.rs  eth_address.rs  events.rs  lib.rs  request_id.rs  testutils.rs  utils.rs
relink/test_snapshots/confirmed_owner/test/: authorization.1.json  init.1.json  reinit.1.json  transfer.1.json
