[workspace]
resolver = "2"
members = [
    "relink",
    "relink-vrf-direct-funding-proxy",
    "relink-vrf-consumer-example",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = { version = "20.0.0-rc1" }
relink = { path = "relink" }
relink-vrf-direct-funding-proxy = { path = "relink-vrf-direct-funding-proxy" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
