[package]
name = "relink-vrf-consumer-example"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
relink = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
relink = { workspace = true, features = ["testutils"] }
relink-vrf-direct-funding-proxy = { workspace = true, features = ["testutils"] }
