[package]
name = "relink"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[features]
testutils = ["dep:rand", "dep:stellar-strkey", "dep:ethsign"]

[dependencies]
soroban-sdk = { workspace = true }
hex-slice = "0.1.4"
rand = { version = "0.8.5", optional = true }
stellar-strkey = { version = "0.0.8", optional = true }
ethsign = { version = "0.9.0" , optional = true}

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = "*"
stellar-strkey = "*"
ethsign = "*"
