[package]
name = "relink-vrf-direct-funding-consumer"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
relink = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
relink = { workspace = true, features = ["testutils"] }
